fixed the padding in #exercise-container div 4 so text isn't squished

--- a/develop/style.css
+++ b/develop/style.css
@@ -40,6 +40,7 @@
 #exercise-container div p4 {
   font-weight: bold;
   font-size: 20px;
+  padding-bottom: 2px;
   background-color: rgb(42, 235, 193);
   border: 3px solid black;
   padding-top: 1px;
